fix: sidebar alignment

--- a/src/components/Sidebar/B4aSidebar.scss
+++ b/src/components/Sidebar/B4aSidebar.scss
@@ -317,7 +317,8 @@ $footerHeight: 57px;
 
 .section_header {
   display: block;
-  align-items: center;
+  text-align: center;
+  // align-items: center;
   // height: 65px;
   font-size: 14px;
   padding: 1rem 1rem;
